# khamoshchat-idenitity-aws

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  cdk.json  package-lock.json  package.json  tsconfig.json
.agent/workflows/: create_rust_lambda.md
lambda/: register.ts
lambda/bundle/: Cargo.toml  README.md
lambda/bundle/src/: http_handler.rs  main.rs
lambda/register/: Cargo.toml  README.md
lambda/register/src/: http_handler.rs  main.rs
lib/: api-stack.ts  config.ts  infra-stack.ts  khamoshchat-identity-aws-stack.ts
lib/constructors/: lambda-constructor.ts  rust-lambda-constructor.ts
test/: khamoshchat-identity-aws.test.ts
