[package]
name = "bundle"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.1.7"
aws-sdk-dynamodb = "1.6.0"
lambda_http = "0.14.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
libsignal-dezire = "0.1.143"
