[package]
name = "register"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.8.12"
aws-sdk-dynamodb = "1.101.0"
base64 = "0.22.1"
lambda_http = "1.0.0"
libsignal-dezire = "0.1.12"
rand = "0.8"

serde = "1.0.228"
serde_json = "1.0.145"

tokio = { version = "1", features = ["macros"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
